feat(server.py): add list db
